@@ -225,7 +225,7 @@ machine_dialog_description=Configure the machine for ’__1__’
 machine_does_not_use_fuel=doesn’t use fuel
 machine_limit=Limit
 machine_limit_tt=Limits the number of machines this line will use. The actual amount might be lower if fewer machines are needed.
-machine_force_limit=Force limit
+machine_force_limit=Exact limit
 machine_force_limit_tt=Forces the number of machines to be the exact amount specified above, even if this leads to overproduction. Only makes sense in combination with a machine limit.
 
 # Beacon dialog
